src/objects/MicrostrategyCommunitySearchSetting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>CommunityId__c</fullName>
        <defaultValue>&quot;0DB440000004CRq&quot;</defaultValue>
        <label>Community Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GlobalSearchDownNotificationRecipient__c</fullName>
        <defaultValue>&quot;sfdc@grazitti.com&quot;</defaultValue>
        <label>Global Search Down Notification Recipien</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GlobalSearchServerEndpoint__c</fullName>
        <defaultValue>&quot;https://fedsearch.microstrategy.com:3000&quot;</defaultValue>
        <label>Global Search Server Endpoint</label>
        <type>Url</type>
    </fields>
    <label>Microstrategy Community Search Setting</label>
</CustomObject>